# Proyecto2--Python

./: .gitignore  Makefile  README.md  SETUP_INSTRUCTIONS.md  requirements-dev.txt  requirements.txt
backend/: .env.example  analyze_spatial_decay.py  config.py  generate_training_dataset.py  main.py  predict_risks.py  pyproject.toml  requirements.txt  test_risk_storage.py  train_models.py
backend/api/: __init__.py  forecast.py  health.py  incidents.py  ml.py  pipelines.py  predictions.py  risk.py  stations.py
backend/cache/: api_state.json
backend/core/: __init__.py
backend/core/analysis/: __init__.py  risk_analyzer.py
backend/core/cache/: api_state.json
backend/core/database/: raindrop.db  raindrop_db.py
backend/core/ml/: __init__.py  incident_correlation.py  risk_predictor.py
backend/core/ml/models/: rf_flood.joblib
backend/core/notebooks/train/: DataClean.ipynb  SeriesTiempoClima.ipynb  Train_and_Visualize.ipynb
backend/core/pipelines/etl/: README_DUMMY_DATA.md  clean_dummy_data.py  generate_dummy_data.py
backend/core/processing/processing/: clean_climate_data.py  merge_all_sources.py
backend/core/scheduler/: __init__.py  pipeline_scheduler.py
backend/docs/: DATASET_REQUIREMENTS.md
backend/migrations/: add_risk_columns.py  populate_existing_risks.py
backend/ml_models/: risk_model.joblib
backend/scripts/: README.md  clear_weather_data.py  clear_weather_data_force.py  scrape_stations.py  stations_imhpa.json  update_config.py
backend/services/: __init__.py  metrics_calculator.py  model_trainer.py  predictor.py  risk_calculator.py
(+64 files in other folders)
