[project]
name = "raindrop-backend"
version = "1.0.0"
description = "Backend API para rAIndrop - Sistema de Predicción de Riesgos Climáticos en Panamá"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pandas==2.1.4",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "apscheduler==3.10.4",
    "python-multipart==0.0.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
